--- a/Team_Purple/app/src/main/res/values/strings.xml
+++ b/Team_Purple/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="login">Login</string>
     <string name="text_English">English</string>
     <string name="text_hint_Email">Email</string>
-    <string name="text_hint_password">password</string>
-    <string name="text_hint_Repassword">Re-password</string>
+    <string name="text_hint_password">Password</string>
+    <string name="text_hint_Repassword">Re-Password</string>
     <string name="btn_text_Register">Register</string>
     <string name="text_forget_pass">Forget password</string>
     <string name="text_Meetly">Meetly</string>
@@ -13,5 +13,6 @@
     <string name="text_btn_CreateAccount">Create Account</string>
     <string name="text_dontpost">We don\'t post anything to Facebook.</string>
     <string name="text_terms">By Signing in,You agree to our <b>Terms of Service</b> and <b>Privacy policy.</b> </string>
+    <string name="text_register">Register</string>
 
 </resources>
