commit Community Guideline activity Licence Activity Safety Tip Activity

--- a/Team_Purple/app/src/main/res/values/strings.xml
+++ b/Team_Purple/app/src/main/res/values/strings.xml
@@ -136,5 +136,139 @@ If you have any questions or suggestions about my Privacy Policy, do not hesitat
     <string name="tv_earn_free_coin">EARN FREE COINS</string>
     <string name="tv_0_coin">0 Coins</string>
     <string name="tv_unlock_feature_string">Coins unlock feature like extra begels and the ability to view mutual friend</string>
+    <string name="tv_community_guideline">Community Guidelines</string>
+    <string name="tv_welcome_to_hotmeet_community">Welcome to the hotmeet community.</string>
+    <string name="tv_licence">Licenses</string>
+    <string name="tv_hotmeet_community_information">Welcome to the hotmeet community.
+
+If you’re honest, kind and respectful to others, you’ll always be welcome here. If you choose not to
+        be, you may not last. Our goal is to allow users to express themselves freely as long as it
+        doesn’t offend others. Everyone is held to the same standard on hotmeet. We’re asking you 
+        to be considerate, think before you act, and abide by our community guidelines both on and
+        offline. Seriously, don’t make us Swipe Left on you—because there will be no do-overs once 
+        we do.
+
+Nudity or Sexual Content hotmeet wasn’t invented to show off your six most provocative photos. 
+        Seriously. We’re not asking you to comb your hair to one side and put on your Sunday best; 
+        just try to keep it classy and appropriate for public consumption. No nudity, no sexually
+        explicit content, no sex toys. Also, if you choose to sport a thong, please note: suggestive
+        poses are not allowed on hotmeet. (If it’s in the Kamasutra, it probably shouldn’t be in 
+        your profile pic.) Photos that violate these guidelines may be deleted, and the most severe
+        cases may result in account removal. Inappropriateness If you wouldn’t say it to someone’s 
+        face, don’t say it on hotmeet. Keep in mind, there is a human being on the other end of your
+        screen. Be respectful with anyone you interact with in the hotmeet community. If you are 
+        disrespectful, offensive, threatening or rude to another user, we reserve the right to ban
+        you from hotmeet. Violent or Graphic Content We do not tolerate violent, graphic or obscene
+        photos or profiles containing hate speech on hotmeet, and will remove any such content that 
+        we identify. Any content that we deem disrespectful to others in the community may be
+        removed, and the user banned, depending on its severity. With this in mind, please exercise
+        restraint and respect for others in the community when posting hunting photos, as many users 
+        find images of dead animals disturbing. Hate We have a zero-tolerance policy on hate speech.
+        Any content that promotes or condones violence against individuals or groups based on race
+        or ethnicity, religion, disability, gender, age, nationality, sexual orientation or gender 
+        identity is strictly forbidden and may result in you being permanently banned. Children 
+        Unattended Standard supermarket rules apply. No children unaccompanied by an adult — in this 
+        case, we’re talking about your profile photos. Even if it’s you at age seven and it’s the
+        cutest you ever. This is to protect kids. Their safety is more important than your
+        adorableness of years past — we reserve the right to remove these photos. Harassment Any
+        reports of stalking, threats, bullying, intimidation, invading privacy, or revealing other 
+        people's personal information are taken very seriously. That means no taking screenshots of
+        other people’s profiles or conversations and posting or distributing them publicly. hotmeet 
+        reserves the right to ban any user that has exhibited behavior that is threatening,
+        intentionally malicious, or harmful to other users. Children Unattended Standard supermarket
+        rules apply. No children unaccompanied by an adult — in this case, we’re talking about your 
+        profile photos. Even if it’s you at age seven and it’s the cutest you ever. This is to 
+        protect kids. Their safety is more important than your adorableness of years past — we
+        reserve the right to remove these photos. Scamming hotmeet has a zero-tolerance policy on
+        predatory behavior of any kind. Anyone attempting to get other users’ private information 
+        for fraudulent or illegal activity may be banned. Also, any user caught sharing their own 
+        financial account information (PayPal, Venmo, etc.) for the purpose of receiving money from
+        other users may be banned from hotmeet. Copyright Infringement If it doesn’t belong to you,
+        it doesn’t belong on your hotmeet profile. Any of your profile content that someone else 
+        owns the copyright to (and has not granted you authorization to use) may be deleted. Phone 
+        Numbers or Private Information No, we don’t need your digits. Please do not publish a phone
+        number on your profile. hotmeet invented the double opt-in, (two people have to swipe right 
+        on each other to connect), so that personal information can be shared privately, if desired,
+        and not broadcast publicly. Private information of any sort, such as phone numbers, social 
+        security numbers, addresses, passwords or financial information is subject to removal and may
+        result in you being banned from hotmeet
+</string>
+
+    <string name="tv_safty_tips">Safety Tips</string>
+
+    <string name="tv_safety_tips_information">
+        Dating Safely hotmeet brings people together. With more than 20 billion matches made to date
+        and millions of new matches made daily, our community is constantly growing. With so many
+        people on hotmeet, user safety is a priority. We understand that meeting someone for the
+        first time whether online, through an acquaintance or on an outing is intriguing and exciting.
+        However, your safety is very important, and because you are in control of your hotmeet
+        experience, there are certain safety steps that you should follow while dating – both online
+        and offline. We ask you to read the tips and information below, and strongly urge you to
+        follow these guidelines in the interest of your personal safety and well-being. However, you
+        are always the best judge of your own safety, and these guidelines are not intended to be a
+        substitute for your own judgment. Online Behavior Protect Your Finances and Never Send Money
+        or Financial Information Never respond to any request to send money, especially overseas or
+        via wire transfer, and report it to us immediately – even if the person claims to be in an
+        emergency. Wiring money is like sending cash: the sender has no protections against loss and
+        it’s nearly impossible to reverse the transaction or trace the money. For more information,
+        click on the video below to the U.S. Federal Trade Commissions advice to avoid online dating
+        scams, also available here. Protect Your Personal Information Never give personal information,
+        such as: your social security number, credit card number or bank information, or your work or
+        home address to people you don’t know or haven’t met in person. Note: hotmeet will never send
+        you an email asking for your username and password information. Any such communication should
+        be reported immediately. Be Web Wise Block and report suspicious users. You can block and
+        report concerns about any suspicious user anonymously at any time on hotmeet – while swiping
+        or after you’ve matched. Keep conversations on the platform. Bad actors will try to move the
+        conversation to text, personal email or phone conversations. Report All Suspicious Behavior
+        Additionally, please report anyone who violates our terms of use. Examples of terms of use
+        violations include: Asks you for money or donations Requesting photographs. Minors using the
+        platform Users sending harassing or offensive messages Users behaving inappropriately after
+        meeting in person Fraudulent registration or profiles. Spam or solicitation, such as
+        invitations to call 1-900 numbers or attempts to sell products or services. Offline Behavior
+        First meetings are exciting, but always take precautions and follow these guidelines to help
+        you stay safe: Get to Know the Other Person Keep your communications limited to the platform
+        and really get to know users online/using the app before meeting them in person. Bad actors
+        often push people to communicate off the platform immediately. It’s up to you to research
+        and do your due diligence. Always Meet and Stay in Public Meet for the first time in a
+        populated, public place – never in a private or remote location, and never at your home or
+        apartment. If your date pressures you, end the date and leave at once. Tell Your Friends
+        and Family Members of Your Plans Inform a friend or family member of your plans and when
+        and where you’re going. Make sure you have your cell phone charged and with you at all times.
+        Transport Yourself to and from the Meeting You need to be independent and in control of your
+        own transportation, especially in case things don’t work out. Stay Sober Consumption of
+        alcohol and/or other drugs can impair your judgment and potentially put you in danger.
+        It’s important to keep a clear mind and avoid anything that might place you at risk. Be aware
+        that bad actors might try to take advantage of you by altering your beverage(s) with synthetic
+        substances. Health hotmeet welcomes everyone and empowers our community of users to create
+        and cultivate relationships. An important aspect of any healthy relationship though – whether
+        formed on hotmeet or otherwise – is ensuring proper sexual health and safety. And as a member
+        of the hotmeet community it is your responsibility to make sure you do the following, if you
+        choose to engage in sexual activity. Protect Yourself. You and your partner should use proper
+        protection. Condoms and other mechanisms can significantly reduce the risk of contracting or
+        passing on an STI, such as HIV. To be effective, however, protective measures must be used
+        consistently. Please keep in mind, you can still get certain STIs, like herpes or HPV from
+        contact with your partner’s skin even when using a condom. Be Open and Honest It is completely
+        reasonable to have a conversation with your partner regarding sex and sexual contact before
+        actually having it. All issues ranging from the number of partners each of you has had, to
+        the last time each of you was tested for STIs are fair game. Many STIs are curable or
+        treatable. If either you or your partner has an STI that is curable, you both need to start
+        treatment to avoid becoming re-infected. It is important to be completely honest in these
+        conversations. Vaccinate The risk of contracting some STIs can be reduced through vaccination.
+        Talk to your doctor or a professional at a sexual health clinic to learn more.
+    </string>
+
+    <string name="tv_licenses_information">
+        Below is a non-exhaustive list of trademarks and service marks owned by Edicosglobal Digital
+        S.L. related to the hotmeet brand. You may not use the below marks without authorization
+        from Edicosglobal Digital S.L.. If granted authorization and you use the below marks in
+        publications distributed only in the United States, include the appropriate ™ or ® symbol
+        on at least the first use and on those subsequent uses where the marks appear prominently.
+        For publications distributed outside the United States, use of the ™ notice symbol is
+        acceptable. It is also appropriate to use, instead of the trademark symbols, the trademark
+        legends in the forms listed below: Sample trademark legends:
+        1) For registered trademarks:
+        hotmeet is the exclusive registered trademark of Edicosglobal Digital S.L., and is used with permission.
+        2) For unregistered trademarks: hotmeet is the exclusive trademark of Edicosglobal Digital S.L., and is used with permission.
+    </string>
 
 </resources>
